--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
   <div class="row" id="main-contents">
     <div class="col-4" id="static">
       <div class="row">
-        <label class="text-warning">Player a:&nbsp</label><label class="text-warning" id="black-rate"></label>
+        <label class="text-warning">Player A:&nbsp</label><label class="text-warning" id="black-rate"></label>
       </div>
       <div class="row">
-        <label class="text-warning">Player b:&nbsp</label><label class="text-warning" id="red-rate"></label>
+        <label class="text-warning">Player B:&nbsp</label><label class="text-warning" id="red-rate"></label>
       </div>
       <br/>
       <div class="row">
